--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <div class="header-menu">
                 <div class="header-logo"><a href="#" class="logo-link">Startup</a></div>
                 <nav class="navbar">
-                        <div class="navbar-hamburger">
-                                <span class="blink"></span>
-                                <span class="blink"></span>
-                                <span class="blink"></span>
-                            </div>
+                    <div class="navbar-hamburger">
+                        <span class="blink"></span>
+                        <span class="blink"></span>
+                        <span class="blink"></span>
+                    </div>
                     <ul class="navbar-list">
                         <li class="navbar-list__item"><a href="#">Home</a></li>
                         <li class="navbar-list__item"><a href="#services">Services</a></li>
@@ -264,56 +264,63 @@
                 <div class="work-images">
                     <div class="work-images__item revealator-slideup">
                         <div class="work-images__wrap">
-                       <div class="image"> <img src="./assets/img/img1.png" alt=""></div>
-                        <div class="work-images__caption">
-                            <h3>Hair Dresser</h3>
-                            <p>Branding</p>
-                            <div class="work-images__caption-button"><a href="#">View<i
-                                        class="fas fa-chevron-up"></i></a></div>
-                        </div>
-                        <div class="work-images__overlay"></div>
-                    </div>
-                    </div>
-                    <div class="work-images__item revealator-slideup">
-                            <div class="work-images__wrap">
-                       <div class="image"> <img src="./assets/img/img2.png" alt=""></div>
-                        <div class="work-images__overlay"></div>
+                            <div class="image"> <img src="./assets/img/img1.png" alt=""></div>
+                            <div class="work-images__caption">
+                                <h3>Hair Dresser</h3>
+                                <p>Branding</p>
+                                <div class="work-images__caption-button"><a href="#">View<i
+                                            class="fas fa-chevron-up"></i></a></div>
                             </div>
+                            <div class="work-images__overlay"></div>
+                        </div>
                     </div>
                     <div class="work-images__item revealator-slideup">
                         <div class="work-images__wrap">
-                        <div class="image"><img src="./assets/img/img3.png" alt=""></div>
-                        <div class="work-images__overlay"></div></div>
+                            <div class="image"> <img src="./assets/img/img2.png" alt=""></div>
+                            <div class="work-images__overlay"></div>
+                        </div>
                     </div>
                     <div class="work-images__item revealator-slideup">
                         <div class="work-images__wrap">
-                        <div class="image"><img src="./assets/img/img4.png" alt=""></div>
-                        <div class="work-images__overlay"></div></div>
+                            <div class="image"><img src="./assets/img/img3.png" alt=""></div>
+                            <div class="work-images__overlay"></div>
+                        </div>
                     </div>
                     <div class="work-images__item revealator-slideup">
                         <div class="work-images__wrap">
-                       <div class="image"> <img src="./assets/img/img5.png" alt=""></div>
-                        <div class="work-images__overlay"></div></div>
+                            <div class="image"><img src="./assets/img/img4.png" alt=""></div>
+                            <div class="work-images__overlay"></div>
+                        </div>
                     </div>
                     <div class="work-images__item revealator-slideup">
                         <div class="work-images__wrap">
-                        <div class="image"><img src="./assets/img/img6.png" alt=""></div>
-                        <div class="work-images__overlay"></div></div>
+                            <div class="image"> <img src="./assets/img/img5.png" alt=""></div>
+                            <div class="work-images__overlay"></div>
+                        </div>
                     </div>
                     <div class="work-images__item revealator-slideup">
                         <div class="work-images__wrap">
-                       <div class="image"> <img src="./assets/img/img7.png" alt=""></div>
-                        <div class="work-images__overlay"></div></div>
+                            <div class="image"><img src="./assets/img/img6.png" alt=""></div>
+                            <div class="work-images__overlay"></div>
+                        </div>
                     </div>
                     <div class="work-images__item revealator-slideup">
                         <div class="work-images__wrap">
-                        <div class="image"><img src="./assets/img/img8.png" alt=""></div>
-                        <div class="work-images__overlay"></div></div>
+                            <div class="image"> <img src="./assets/img/img7.png" alt=""></div>
+                            <div class="work-images__overlay"></div>
+                        </div>
                     </div>
                     <div class="work-images__item revealator-slideup">
                         <div class="work-images__wrap">
-                       <div class="image"> <img src="./assets/img/img9.png" alt=""></div>
-                        <div class="work-images__overlay"></div></div>
+                            <div class="image"><img src="./assets/img/img8.png" alt=""></div>
+                            <div class="work-images__overlay"></div>
+                        </div>
+                    </div>
+                    <div class="work-images__item revealator-slideup">
+                        <div class="work-images__wrap">
+                            <div class="image"> <img src="./assets/img/img9.png" alt=""></div>
+                            <div class="work-images__overlay"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -411,7 +418,7 @@
             </div>
         </div>
     </section>
-    <section class="contact revealator-slideright" id="contact">
+    <section class="contact" id="contact">
         <h4>title</h4>
         <div class="wrapper">
             <div class="contact-content">
@@ -419,21 +426,21 @@
                 <p class="contact-content__subtitle">Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
                 <div class="contact-block">
                     <div class="contact-block__information">
-                        <div class="contact-block__information-item">
+                        <div class="contact-block__information-item revealator-slideup">
                             <i class="fas fa-map-marker-alt contact-block__icon"></i>
                             <h3>Adress</h3>
                             <p>312, 7th Ave, New York
                             </p>
                             <p>NY 101200, United States of America</p>
                         </div>
-                        <div class="contact-block__information-item">
+                        <div class="contact-block__information-item revealator-slideup">
                             <i class="fas fa-mobile-alt contact-block__icon"></i>
                             <h3>Hotline (24X7)</h3>
                             <p>+65 0052 300, +65 88251 210
                             </p>
                             <p>+88 01723 511 340</p>
                         </div>
-                        <div class="contact-block__information-item">
+                        <div class="contact-block__information-item revealator-slideup">
                             <i class="far fa-envelope contact-block__icon"></i>
                             <h3>E-mail</h3>
                             <p>shapedtheme@gmail.com
@@ -441,7 +448,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="contact-form">
+                    <div class="contact-form revealator-slideup">
                         <form class="contact-form__container" method="get" action="#">
                             <input class="form-input" name="name" type="text" required placeholder="Your name">
                             <input class="form-input" name="mail" type="email" required placeholder="Your E-mail">
