--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </header>
 
-    <section class="services revealator-slideright" id="services">
+    <section class="services" id="services">
         <h4>title</h4>
         <div class="wrapper">
             <div class="services-content">
@@ -65,7 +65,7 @@
                 </p>
 
                 <div class="services-block">
-                    <div class="services-item">
+                    <div class="services-item revealator-slideup">
                         <div class="services-item__icon">
                             <i class="fas fa-font"></i>
                         </div>
@@ -73,7 +73,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo
                             inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
                     </div>
-                    <div class="services-item">
+                    <div class="services-item revealator-slideup">
                         <div class="services-item__icon">
                             <i class="fas fa-code"></i>
                         </div>
@@ -81,7 +81,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo
                             inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
                     </div>
-                    <div class="services-item">
+                    <div class="services-item revealator-slideup">
                         <div class="services-item__icon">
                             <i class="far fa-life-ring"></i>
                         </div>
