--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
     </section>
     <section class="about" id="about">
-        <h4>tite</h4>
+        <h4>title</h4>
         <div class="wrapper">
             <div class="about-content">
                 <h2 class="about-content__title">about us</h2>
