--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/fm.revealator.jquery.min.css">
+    <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="libs/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -119,7 +120,7 @@
 
                 <div class="about-carusel revealator-slideup">
 
-                    <div class="about-carusel__item active">
+                    <div class="about-carusel__item">
                         <div class="about-image">
                             <div class="about-carusel__overlay"></div>
                             <img src="./assets/img/TeamPic-1.png" alt="Khalil">
@@ -239,8 +240,7 @@
                         <h3>John Doe</h3>
                         <p>Front-end Developer</p>
                     </div>
-                    <div class="controls next" id="next"><i class="fas fa-chevron-up"></i></div>
-                    <div class="controls previus" id="previus"><i class="fas fa-chevron-up"></i></div>
+
                 </div>
             </div>
 
@@ -408,10 +408,30 @@
                     <img src="./assets/img/client3.png" alt="">
                     <img src="./assets/img/client4.png" alt="">
                     <img src="./assets/img/client5.png" alt="">
+                    <p>Hvaing placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus
+                        autem quibusdam et aut officiis debitis aut rerum”</p>
+                    <p>John Doe, Google Inc.</p>
                 </div>
-                <p>Hvaing placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus
-                    autem quibusdam et aut officiis debitis aut rerum”</p>
-                <p>John Doe, Google Inc.</p>
+                <div class="clients-partner">
+                    <img src="./assets/img/client1.png" alt="">
+                    <img src="./assets/img/client2.png" alt="">
+                    <img src="./assets/img/client3.png" alt="">
+                    <img src="./assets/img/client4.png" alt="">
+                    <img src="./assets/img/client5.png" alt="">
+                    <p>Hvaing placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus
+                        autem quibusdam et aut officiis debitis aut rerum”</p>
+                    <p>John Doe, Google Inc.</p>
+                </div>
+                <div class="clients-partner">
+                    <img src="./assets/img/client1.png" alt="">
+                    <img src="./assets/img/client2.png" alt="">
+                    <img src="./assets/img/client3.png" alt="">
+                    <img src="./assets/img/client4.png" alt="">
+                    <img src="./assets/img/client5.png" alt="">
+                    <p>Hvaing placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus
+                        autem quibusdam et aut officiis debitis aut rerum”</p>
+                    <p>John Doe, Google Inc.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -478,6 +498,7 @@
     </footer>
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="assets/js/fm.revealator.jquery.js"></script>
+    <script src="assets/js/slick.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
