--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="wrapper">
             <div class="header-menu">
                 <div class="header-logo"><a href="#" class="logo-link">Startup</a></div>
-                <nav class="navbar">
+                <nav class="navbar" id="navbar">
                     <div class="navbar-hamburger">
                         <span class="blink"></span>
                         <span class="blink"></span>
